# lora-hub

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/: release-drafter.yml
.github/workflows/: release-drafter.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 001_initial.sql  002_chat_index.sql
apps/desktop/src-tauri/src/: attachments.rs  audit.rs  cache.rs  db.rs  lib.rs  mcp.rs  memory.rs  permissions.rs  sidecar.rs  tools.rs  workspace.rs
apps/desktop/src/components/: ABComparePane.tsx  ActiveAdapterStrip.tsx  AdapterDetail.tsx  AdapterSpecSheet.tsx  AdaptersView.tsx  AttachmentCard.tsx  AttachmentChip.tsx  AuditLogSection.tsx  ChatView.tsx  CommandPalette.tsx  CommandPicker.tsx  Composer.tsx  ConfirmModal.tsx  DateHeatmapCard.tsx  DottedSpinner.tsx  FeaturedAdapters.tsx  FirstRunWizard.tsx  FlightResultsCard.tsx  Gemma4Tile.tsx  Logo.tsx  Markdown.tsx  MemoryApprovalModal.tsx  ModeChip.tsx  ModelsView.tsx  PermissionPrompt.tsx  PermissionsPicker.tsx  QuickChips.tsx  SettingsPanel.tsx  Sidebar.tsx  SpecialistPlanBubble.tsx  SpecialistStepBubble.tsx  StoreBrowse.tsx  StoreLanding.tsx  StoreView.tsx  ThoughtDisclosure.tsx  ToolCallBubble.tsx  ToolCallChip.tsx  TurnRow.tsx  UpdateBanner.tsx  WelcomeScreen.tsx  (+1 more)
apps/desktop/src/components/stripe/: CancelCard.tsx  InvoiceCard.tsx  OutreachDraftsCard.tsx  PaymentLinkCard.tsx  RefundCard.tsx  SplitBillCard.tsx  SplitStatusCard.tsx  StripeCard.tsx  SubscriptionCard.tsx  SubscriptionsListCard.tsx  TestClockCard.tsx  TransactionsCard.tsx  formatters.ts
apps/desktop/src/lib/: ab-deltas.ts  adapter-accent.ts  airlineColors.ts  attachments.ts  base-descriptions.ts  cache.ts  chat-helpers.ts  chat-store.ts  editorial-data.ts  fallback-bases.ts  memory.ts  message-types.ts  permission-bridge.ts  persistence.ts  safe-url.ts  sidecar.ts  store.ts  system-prompt.ts  system.ts  theme.ts  thinking.ts  toolRenderers.ts  tools.ts  workspace.ts
docs/: PLAN.md  UX.md  overview-deck.html
mcp/stripe-mcp/: README.md  pyproject.toml
mcp/stripe-mcp/src/stripe_mcp/: __main__.py  server.py
scripts/: README.md  bump-version.sh  bundle-sidecar.sh  convert_peft_adapter.py  dev.sh  release.sh  smoke_gemma4.py
sidecar/: README.md  mlx_server.py  peft_convert.py  requirements.txt
spike/: README.md  requirements.txt  results.json  swap_bench.py
storefront/: README.md  package-lock.json  package.json  schema.sql  seed.sql  wrangler.toml
storefront/scripts/: upload_local_artifacts.sh
storefront/src/: worker.ts
training/: .gitignore  README.md  setup.sh
training/configs/: gemma4-e2b-skyt1.yaml  gemma4-e4b-skyt1.yaml
training/scripts/: train_fallback.py  upload_to_hf.py
