[package]
name = "lora-hub-desktop"
version = "0.1.0"
description = "LoRA Hub — local LLM with hot-swappable LoRA adapters"
authors = ["LoRA Hub"]
edition = "2021"
license = "MIT"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
glob = "0.3"
readability = "0.3"
html2md = "0.2"
url = "2"
pdf-extract = "0.7"
base64 = "0.22"
docx-rs = "0.4"
calamine = "0.34"
rtf-parser = "0.4"
zip = "2"
quick-xml = "0.36"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
regex = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
